@@ -1,3 +1,9 @@
+2002-02-15  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03056] DISPLAY_IMAGE, STOP_IMAGE don't work.
+	* main.c (dispI): fix DISPLAY_IMAGE
+	* main.c (stopI): fix STOP_IMAGE
+
 2002-02-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03055] LIB_DIR -> w3m_lib_dir()
